# scMRDR

./: CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  genindex.html  index.md  installation.md  modules.html  objects.inv  scMRDR.html  searchindex.js  usage.md
docs/_sources/: scMRDR.rst.txt
docs/source/: conf.py  scMRDR.rst
document/: index.html  scMRDR.html  searchindex.js
document/_sources/: index.rst.txt
experiments/: umap_plots.py  unscale.py
experiments/BMMC_codes/: data_clean.ipynb  glue_graph.py  main.py  main_ablation.py  main_sensitivity.py  test_scvi.py
experiments/muto_codes/: Rcode_seurat.R  Rcodes_harmony.R  compare_maxfuse.py  compare_simba.py  data_clean.ipynb  glue_graph.py  jamie_test.py  main.py  main_ablation.py  main_sensitivity.py  opti_pamona.py  test_scvi.py  union.py
experiments/plots/: metrics.py  sensitivity_metrics.py
experiments/yao_codes/: Rcodes_harmony.R  Rcodes_seurat.R  compare_maxfuse.py  compare_simba.py  data_clean.ipynb  glue_lsi.py  glue_pca.py  main.py  test_scvi.py
src/: setup.py
src/scMRDR/: __init__.py  data.py  loss.py  model.py  module.py  requirements.txt  train.py
