[project]
name = "scMRDR"
version = "1.0.0"
description = "A package to integrate unpaired multi-omics single-cell data via single-cell Multi-omics Regularized Disentangled Representations."
readme = "README.md"
authors = [
  {name = "Jianle Sun", email = "audreyfeldroy@example.com"}
]
maintainers = [
  {name = "Jianle Sun", email = "audreyfeldroy@example.com"}
]
classifiers = [

]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"    
]

[project.urls]
bugs = "https://github.com/sjl-sjtu/scMRDR/issues"
changelog = "https://github.com/sjl-sjtu/scMRDR/blob/master/changelog.md"
homepage = "https://github.com/sjl-sjtu/scMRDR"

[project.scripts]
scMRDR = "scMRDR.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

# Optional: Per-directory overrides for flexibility in boilerplates with tests or examples.
[[tool.ty.overrides]]
match = ["tests/**.py"]
rules.TY016 = "ignore"  # Ignore invalid-assignment in tests, e.g., for dynamic fixtures.
rules.TY029 = "ignore"  # Ignore invalid-return-type in tests.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
